Added create and delete pathways; added swagger ui